--- a/eAppointmentClient/src/app/components/login/login.component.html
+++ b/eAppointmentClient/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
                 <p>Please fill your information to sign in</p>
             </div>
             <div class="card-body">
-                <form formValidate #loginForm="ngForm" autocomplete="off">
+                <form formValidate #loginForm="ngForm" autocomplete="off" (ngSubmit)="signIn(loginForm)">
                     <div class="form-group">
                         <label>Username or Email</label>
                         <input type="text" class="form-control" [(ngModel)]="login.userNameOrEmail" name="userNameOrEmail" required minlength="3">
@@ -23,7 +23,7 @@
                         }
                     </div>
                     <div class="form-group mt-2">
-                        <button class="btn btn-dark w-100">
+                        <button type="submit" class="btn btn-dark w-100">
                             <i class="fa-solid fa-lock me-1"></i>
                             Sign In
                         </button>
