Doctor sayfası tasarımı

--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand">e-Appointment</a>
+      <a class="navbar-brand" routerLink="/">e-Appointment</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Doctors</a>
+            <a class="nav-link active" routerLink="/doctors" aria-current="page">Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Patients</a>
+            <a class="nav-link active" routerLink="/patients" aria-current="page">Patients</a>
           </li>
         </ul>
         <span class="me-2">Taner Saydam</span>
