Patient CRUD işlemleri

--- a/eAppointmentClient/src/app/components/patients/patients.component.html
+++ b/eAppointmentClient/src/app/components/patients/patients.component.html
@@ -31,6 +31,7 @@
                 <tr>
                     <th>#</th>
                     <th>Full Name</th>
+                    <th>Identity Number</th>
                     <th>City / Town</th>
                     <th>Full Address</th>
                     <th>Operations</th>
@@ -41,6 +42,7 @@
                     <tr>
                         <td>{{$index + 1}}</td>
                         <td>{{patient.fullName}}</td>
+                        <td>{{patient.identityNumber}}</td>
                         <td>{{patient.city}} / {{patient.town}}</td>
                         <td>{{patient.fullAddress}}</td>
                         <td>
@@ -77,6 +79,12 @@
                 <div class="form-group mt-2">
                     <label>Last Name</label>
                     <input type="text" [(ngModel)]="createModel.lastName" name="lastName" class="form-control" required minlength="3">
+                    <div class="invalid-feedback"></div>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label>Identity Number</label>
+                    <input type="text" [(ngModel)]="createModel.identityNumber" name="identityNumber" class="form-control" required minlength="11" maxlength="11">
                     <div class="invalid-feedback"></div>
                 </div>
 
@@ -125,6 +133,12 @@
                 <div class="form-group mt-2">
                     <label>Last Name</label>
                     <input type="text" [(ngModel)]="updateModel.lastName" name="updatelastName" class="form-control" required minlength="3">
+                    <div class="invalid-feedback"></div>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label>Identity Number</label>
+                    <input type="text" [(ngModel)]="updateModel.identityNumber" name="updateIdentityNumber" class="form-control" required minlength="11" maxlength="11">
                     <div class="invalid-feedback"></div>
                 </div>
 
