--- a/eAppointmentClient/src/app/components/home/home.component.html
+++ b/eAppointmentClient/src/app/components/home/home.component.html
@@ -46,6 +46,7 @@
                 (onAppointmentFormOpening)="onAppointmentFormOpening($event)"
                 (onAppointmentDeleted)="onAppointmentDeleted($event)"
                 (onAppointmentDeleting)="onAppointmentDeleting($event)"
+                (onAppointmentUpdating)="onAppointmentUpdating($event)"
                 >
             </dx-scheduler>
         </div>       
