User sayfası tasarlama

--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link active" routerLink="/patients" aria-current="page">Patients</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/users" aria-current="page">Users</a>
+          </li>
         </ul>
         <span class="me-2">Taner Saydam</span>
         <button (click)="signOut()" class="btn btn-outline-danger">
